# scaffold_manu_test

./: .env.example  .gitattributes  .gitignore  .replit  APP_MANIFEST.yaml  CLAUDE.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  REVIEW_CHECKLIST.md  docker-compose.yml  replit.nix  supervisord.conf
.claude/: settings.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202602260001_initial.py  202603170001_drift_monitor_schema.py
apps/api/src/api/: audit.py  db.py  logging_config.py  main.py  middleware.py  models.py  outbound_http.py  redaction.py  settings.py
apps/api/src/api/auth/: flows.py  handlers.py  providers.py  rate_limit.py
apps/api/src/api/graphql/: __init__.py  handler.py  schema.py  types.py
apps/api/src/api/llm/: client.py  local_runtime.py  local_setup.py
apps/api/src/api/notifications/: slack.py
apps/api/src/api/rest/: __init__.py  cio.py  daf.py  health.py  me.py  monitoring.py  rebalancer.py  tasks.py  uploads.py
apps/api/src/api/services/: agent.py  bigquery_client.py  cio_bigquery.py  daf_bigquery.py
apps/api/src/api/tasks/: base.py  monitoring_run.py  note_summary.py
apps/api/tests/: conftest.py  test_async_examples.py  test_auth_flow.py  test_graphql_notes.py  test_health.py  test_task_endpoints.py
docs/: 00-overview.md  10-local-dev.md  15-frontend.md  20-auth.md  25-testing.md  30-logging.md  35-llm.md  40-security.md  45-background-tasks.md  50-deploy-cloud-run.md  60-runbook-it.md  index.md  perennial_assistant_quick_reference.md  perennial_business_context.md  perennial_etl_workflows.md  perennial_table_relationships_and_query_patterns.md  perennial_table_schema_reference.md
scripts/: check_secrets.py  dev.sh  dev_stop.sh  gcp_bootstrap.sh  gcp_print_env.sh  llm_local_setup.sh  llm_local_start.sh  replit_run.sh  (+4 more)
(+69 files in other folders)
